# demoHostAndDspService

./: .gitignore  CHECKLIST.md  README.md
DspService/: oh-package.json5
DspService/AppScope/: app.json5
DspService/AppScope/resources/base/element/: string.json
DspService/entry/: build-profile.json5  oh-package.json5
DspService/entry/src/main/: module.json5
DspService/entry/src/main/cpp/: CMakeLists.txt  dsp_napi.cpp  dsp_processor.cpp  dsp_processor.h
DspService/entry/src/main/cpp/types/libdspservice/: index.d.ts  oh-package.json5
DspService/entry/src/main/ets/entryability/: EntryAbility.ets
DspService/entry/src/main/ets/pages/: Index.ets
DspService/entry/src/main/ets/serviceextability/: DspServiceExtAbility.ets
DspService/entry/src/main/resources/base/element/: string.json
HostApp/: build-profile.json5  oh-package.json5
HostApp/AppScope/: app.json5
HostApp/AppScope/resources/base/element/: string.json
HostApp/entry/: build-profile.json5  oh-package.json5
HostApp/entry/src/main/: module.json5
HostApp/entry/src/main/cpp/: CMakeLists.txt  audio_native.cpp  audio_native.h  napi_init.cpp
HostApp/entry/src/main/cpp/types/libhostapp/: index.d.ts  oh-package.json5
HostApp/entry/src/main/ets/entryability/: EntryAbility.ets
HostApp/entry/src/main/ets/pages/: Index.ets
HostApp/entry/src/main/resources/base/element/: string.json
shared/: AudioSharedBuffer.h
